--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="wrapper">
             <div class="item">
               <img class="img" src="./img/noun-chat-849822.png" alt="" />
-              <span class="title">CUSTOMER SERVICE</span>
+              <span class="title"> SERVICE</span>
               <span class="text"
                 >Call 1-888-924-4428 or our <br />
                 Chat Service.</span
